fix(apollo, look&feel): dialog should not allow scroll of page behind it (#1286)

--- a/client/apollo/css/src/common/reboot.scss
+++ b/client/apollo/css/src/common/reboot.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html {
+  &:has(dialog[open]) {
+    overflow: hidden;
+  }
+}
+
 body {
   margin: 0;
   font-family: var(--font-family-sans-serif);
